# cerberus

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  frontend_pkg.json  render.yaml
.github/workflows/: ci.yml  publish-sdks.yml
backend/: Dockerfile  gunicorn.conf.py  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/middleware/: auth.py  logging.py  metrics.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  check.py  health.py  policies.py  tenants.py
backend/app/api/v1/schemas/: analytics.py  auth.py  check.py  policy.py  tenant.py
backend/app/core/: __init__.py  exceptions.py  keys.py  limiter.py  policy.py
backend/app/core/algorithms/: __init__.py  base.py  sliding_window.py  token_bucket.py
backend/app/core/lua/: sliding_window.lua  token_bucket.lua
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  policy.py  tenant.py
backend/app/metrics/: __init__.py  prometheus.py
backend/app/utils/: time.py
backend/loadtest/: k6_script.js  locustfile.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 2026_03_12_001_add_email_password_to_tenants.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  test_full_flow.py
backend/tests/integration/: __init__.py  test_check_endpoint.py  test_policies_crud.py  test_tenant_auth.py
backend/tests/unit/: test_key_builder.py  test_policy_manager.py  test_sliding_window.py  test_token_bucket.py
docs/: CHANGELOG.md  CONTRIBUTING.md  api-reference.md  architecture.md  deployment.md  getting-started.md
docs/adr/: 001-redis-sorted-sets.md  002-lua-atomicity.md  003-algorithm-selection.md  004-deployment-architecture.md  005-pydantic-sqlalchemy-annotations.md  006-hatchling-build-config.md  007-jwt-authentication.md  008-sdk-api-alignment.md  009-middleware-packages.md  010-sdk-publish-pipeline.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/dashboard/analytics/: page.tsx
frontend/src/app/(dashboard)/dashboard/api-keys/: page.tsx
frontend/src/app/(dashboard)/dashboard/keys/: page.tsx
frontend/src/app/(docs)/: layout.tsx
frontend/src/app/(docs)/docs/: page.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/docs/: layout.tsx  page.tsx
frontend/src/components/docs/: CodeBlock.tsx  Sidebar.tsx
frontend/src/components/marketing/: CTA.tsx  CodeDemo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Pricing.tsx
frontend/src/components/shared/: Logo.tsx  Navbar.tsx  ThemeToggle.tsx
frontend/src/lib/: api-client.ts  api.ts  auth-context.tsx  constants.ts  types.ts  utils.ts
infra/: docker-compose.prod.yml  docker-compose.yml
infra/grafana/provisioning/dashboards/: cerberus.json  dashboard.yml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
infra/scripts/: init-db.sh  seed-data.sh
sdk/express/: README.md  package-lock.json  package.json
sdk/express/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python-fastapi/: README.md  pyproject.toml
sdk/python-fastapi/cerberus_fastapi/: __init__.py  decorators.py  middleware.py
sdk/python/cerberus/: __init__.py  client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
(+8 files in other folders)
