[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerberus"
version = "1.0.0"
description = "Production-grade Rate-Limit-as-a-Service"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Cerberus Team" }]

dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=24.1.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis[lua]>=2.21.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "coverage>=7.4.0",
    "locust>=2.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC"]
ignore = ["A003"]  # allow shadowing builtins on models (id, type, etc.)

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models need runtime type imports for Mapped[] annotations
"app/db/base.py" = ["TC003"]
"app/db/models/*" = ["TC003"]
# Pydantic schemas need runtime type imports for model fields
"app/api/v1/schemas/*" = ["TC003"]
# FastAPI endpoints need Annotated dependency aliases and path param types at runtime
"app/api/v1/endpoints/*" = ["TC001", "TC003"]
# Dependencies module uses runtime imports for FastAPI DI and SQLAlchemy queries
"app/dependencies.py" = ["TC001", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (no external deps)",
    "integration: integration tests (requires Redis)",
    "e2e: end-to-end tests (full stack)",
    "slow: slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
