[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerberus-sdk"
version = "1.0.0"
description = "Python SDK for Cerberus Rate-Limit-as-a-Service"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Agnij Dutta" }]
readme = "README.md"
keywords = ["rate-limiting", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/agnij-dutta/cerberus"
Documentation = "https://github.com/agnij-dutta/cerberus/tree/main/docs"
Repository = "https://github.com/agnij-dutta/cerberus"
Issues = "https://github.com/agnij-dutta/cerberus/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
